--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <style type='text/css'>
 img {
-    max-height: 560px;
+    max-height: 400px;
     max-width: 964px;
 }
 </style>
@@ -85,7 +85,7 @@ the area between the \(x\)-axis and the function.</p>
 and play with it, we&#39;ve made a simple app to help visualize approximating the &quot;area under
 the curve&quot; with rectangles.</p>
 
-<p><img src="assets/img/screenshot.png" alt=""></p>
+<p><img src="assets/img/screenshot.png" alt="height"></p>
 
   </article>
   <!-- Presenter Notes -->
